[package]

name = "pluto"
version = "0.0.1"
authors = [
    "bvssvni <bvssvni@gmail.com>",
    "Haggus <matt.mrowiec@gmail.com>"
]
keywords = ["gamedev", "competition", "piston"]
description = "Server software for Pluto, the Rust gamedev competition"
license = "MIT"
repository = "https://github.com/PistonDevelopers/redox.git"
homepage = "https://github.com/PistonDevelopers/redox"

[[bin]]

name = "redox"
path = "src/main.rs"

[dependencies]
iron = "0.2.2"
hyper = "0.6.16"
postgres = "0.10.1"
staticfile = "0.0.6"
mount = "0.0.9"
router = "0.0.15"
logger = "0.0.3"
