[package]

name = "pluto"
version = "0.0.1"
authors = [
    "bvssvni <bvssvni@gmail.com>",
    "Haggus <matt.mrowiec@gmail.com>"
]
keywords = ["gamedev", "competition", "piston"]
description = "Server software for Pluto, the Rust gamedev competition"
license = "MIT"
repository = "https://github.com/PistonDevelopers/redox.git"
homepage = "https://github.com/PistonDevelopers/redox"

[[bin]]

name = "redox"
path = "src/main.rs"

[dependencies]
iron = "0.2.6"
postgres = "0.11.0"
staticfile = "0.1.0"
mount = "0.0.9"
router = "0.1.0"
logger = { git = "https://github.com/iron/logger.git" }
handlebars-iron = "0.10.2"
rustc-serialize = "0.3.16"
